--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,9 +1,9 @@
-FROM node:18-slim
+FROM node:24-slim
 
 WORKDIR /app
 
 # Copy package files and install dependencies
-COPY ./frontend/package*.json ./
+COPY ./frontend/package.json ./frontend/package-lock.json ./
 RUN npm install
 
 # Copy source files
