--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.0
 colorama==0.4.6
+debugpy==1.8.14
 distro==1.9.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
