--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,27 @@ services:
       dockerfile: docker/Dockerfile.backend
     ports:
       - "8000:8000"
+      - "5678:5678"
     env_file:
       - ./backend/.env
     volumes:
       - ./backend:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    entrypoint: ["python3"]
+    command:
+      [ 
+        "-m",
+        "debugpy",
+        "--listen",
+        "0.0.0.0:5678",
+        "-m",
+        "uvicorn",
+        "main:app",
+        "--reload",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "8000",
+      ]
 
   frontend:
     build:
