--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,17 @@
           }
         ],
         "justMyCode": true
+      },
+      {
+        "name": "Debug FastAPI with Uvicorn",
+        "type": "debugpy",
+        "request": "launch",
+        "program": "${workspaceFolder}/backend/main.py",
+        "args": ["--reload"],
+        "console": "integratedTerminal",
+        "env": {
+          "PYTHONPATH": "${workspaceFolder}/backend"
+        }
       }
-      
     ]
   }
-  
