--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,52 @@
 annotated-types==0.7.0
 anyio==4.9.0
+Authlib==1.5.2
 certifi==2025.4.26
+cffi==1.17.1
+cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.2.0
 colorama==0.4.6
+cryptography==44.0.3
 debugpy==1.8.14
+distlib==0.3.9
 distro==1.9.0
+ecdsa==0.19.1
 exceptiongroup==1.3.0
 fastapi==0.115.12
+fastapi-auth0==0.5.0
+filelock==3.18.0
 griffe==1.7.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.0
+identify==2.6.10
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
+jwt==1.3.1
 MarkupSafe==3.0.2
 mcp==1.8.0
+nodeenv==1.9.1
 openai==1.78.0
 openai-agents==0.0.14
+platformdirs==4.3.8
+pre_commit==4.2.0
+pyasn1==0.4.8
+pycparser==2.22
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+PyJWT==2.10.1
 python-dotenv==1.1.0
+python-jose==3.4.0
 python-multipart==0.0.20
+PyYAML==6.0.2
 requests==2.32.3
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 sse-starlette==2.3.4
 starlette==0.46.2
@@ -35,3 +56,4 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 uvicorn==0.34.2
+virtualenv==20.31.2
