--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,8 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend:/app
-      - node_modules_cache:/app/node_modules
+      - /app/node_modules
+    env_file:
+      - ./frontend/.env
     environment:
       - VITE_API_URL=http://backend:8000
-
-volumes:
-  node_modules_cache:
